# abc2011

project1/: README.md
project1/cluster-config/: ray-cluster.yaml
project1/test/: test1_list_prime.ipynb  test2_task_dependency.ipynb  test3_stuck_job.ipynb
project2/: CMakeLists.txt  README.md
project2/include/lib/app/: app_config.hpp  app_engine.hpp  launcher.hpp
project2/include/lib/execution/: execution_context.hpp  execution_cost.hpp  execution_event_listener.cpp  execution_event_listener.hpp  execution_report.hpp  live_execution_context.hpp  sim_execution_context.hpp
project2/include/lib/market_data/: market_data_traits.hpp  md_context_config.hpp  md_event_handler.hpp  md_event_listener.hpp  md_utils.hpp
project2/include/lib/market_data/hist/: hist_md_config.hpp  hist_md_context.hpp
project2/include/lib/market_data/live/: live_md_config.hpp  live_md_context.hpp
project2/include/lib/simulation/: exchange_simulator.hpp  latency_model.hpp
project2/include/lib/strat/: ema.hpp  strategy_engine.hpp  strategy_factory.hpp
project2/include/lib/strat/common/: strategy_traits.hpp
project2/include/lib/strategy/: ema.hpp  signal.hpp  strategy_engine.hpp  trader.hpp
project2/include/lib/symbology/: exchange.hpp  instrument.hpp
project2/include/lib/traits/: app_traits.hpp  data_traits.hpp  production_traits.hpp  simulation_traits.hpp
project2/include/lib/utils/: helpers.hpp  order.hpp  orderbook.hpp  pricesize.hpp  side.h
project2/src/: main.cpp
